// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioBorderedBoxField should render correctly 1`] = `
<DocumentFragment>
  .cache-1kz06s5-BorderedBox-StyledBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
}

.cache-zdyabc-StyledRadioContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:hover .e1duuirp3,
.cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:focus .e1duuirp3 {
  background-color: rgba(212,218,231,0.25);
  border-radius: 50%;
}

.cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:hover .e1duuirp3>.e1duuirp4,
.cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:focus .e1duuirp3>.e1duuirp4 {
  fill: #4f0599;
}

.cache-1p2voni-IconContainer {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-5ixesp-StyledIcon-sizeStyles-StyledIcon {
  fill: #dce1eb;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-5ixesp-StyledIcon-sizeStyles-StyledIcon.cache-5ixesp-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-18s3dma-StyledRadio {
  position: absolute;
  opacity: 0.01;
}

.cache-i7tymf-StyledText-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

.cache-18bdq20-StyledExpandable-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-16v2aqw-StyledError {
  font-size: 12px;
  color: #ef5774;
  padding: 0 4px;
}

<form
    novalidate=""
  >
    <div
      class="cache-1kz06s5-BorderedBox-StyledBox e13z6rra3"
    >
      <div
        class="cache-zdyabc-StyledRadioContainer e13z6rra2"
      >
        <div
          class="cache-1dp0kf7"
        >
          <label
            class="e1duuirp2 e1g1zfwd0 cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass"
            for="test-test"
          >
            <div
              class="cache-1p2voni-IconContainer e1duuirp3"
            >
              <svg
                class="e1duuirp4 etwatq50 cache-5ixesp-StyledIcon-sizeStyles-StyledIcon"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
                />
              </svg>
            </div>
            <div>
              Choice 1
            </div>
            <input
              aria-checked="false"
              class="cache-18s3dma-StyledRadio e1duuirp1"
              id="test-test"
              name="test"
              tabindex="0"
              type="radio"
              value="test"
            />
          </label>
        </div>
      </div>
      <div
        class="e1g1zfwd0 cache-i7tymf-StyledText-variantStyles"
      >
        Radio field
      </div>
    </div>
    <div
      class="e13z6rra0 e14o3tsk0 cache-18bdq20-StyledExpandable-StyledExpandable"
    >
      <div
        class="cache-16v2aqw-StyledError e13z6rra1"
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioBorderedBoxField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-1d58127-BorderedBox-StyledBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
  border: 1px solid #4f0599!important;
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-zdyabc-StyledRadioContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:hover .e1duuirp3,
.cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:focus .e1duuirp3 {
  background-color: rgba(212,218,231,0.25);
  border-radius: 50%;
}

.cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:hover .e1duuirp3>.e1duuirp4,
.cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:focus .e1duuirp3>.e1duuirp4 {
  fill: #4f0599;
}

.cache-1p2voni-IconContainer {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-1yojixf-StyledIcon-sizeStyles-StyledIcon {
  fill: #4f0599;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1yojixf-StyledIcon-sizeStyles-StyledIcon.cache-1yojixf-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-18s3dma-StyledRadio {
  position: absolute;
  opacity: 0.01;
}

.cache-i7tymf-StyledText-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

.cache-18bdq20-StyledExpandable-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-16v2aqw-StyledError {
  font-size: 12px;
  color: #ef5774;
  padding: 0 4px;
}

<form
    novalidate=""
  >
    <div
      class="cache-1d58127-BorderedBox-StyledBox e13z6rra3"
    >
      <div
        class="cache-zdyabc-StyledRadioContainer e13z6rra2"
      >
        <div
          class="cache-1dp0kf7"
        >
          <label
            class="e1duuirp2 e1g1zfwd0 cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass"
            for="test-checked"
          >
            <div
              class="cache-1p2voni-IconContainer e1duuirp3"
            >
              <svg
                class="e1duuirp4 etwatq50 cache-1yojixf-StyledIcon-sizeStyles-StyledIcon"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7Z"
                />
              </svg>
            </div>
            <div>
              Choice 1
            </div>
            <input
              aria-checked="true"
              checked=""
              class="cache-18s3dma-StyledRadio e1duuirp1"
              id="test-checked"
              name="test"
              tabindex="0"
              type="radio"
              value="checked"
            />
          </label>
        </div>
      </div>
      <div
        class="e1g1zfwd0 cache-i7tymf-StyledText-variantStyles"
      >
        Radio field checked
      </div>
    </div>
    <div
      class="e13z6rra0 e14o3tsk0 cache-18bdq20-StyledExpandable-StyledExpandable"
    >
      <div
        class="cache-16v2aqw-StyledError e13z6rra1"
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioBorderedBoxField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-hvjhwn-BorderedBox-StyledBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
  cursor: not-allowed!important;
  color: #b2b6c3;
}

.cache-zdyabc-StyledRadioContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-17wwrut-StyledText-variantStyles-StyledRadioContainer-disabledClass {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
  color: #b2b6c3;
  cursor: not-allowed;
}

.cache-1p2voni-IconContainer {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-12489do-StyledIcon-sizeStyles-StyledIcon {
  fill: #f6f5f7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-12489do-StyledIcon-sizeStyles-StyledIcon.cache-12489do-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-18s3dma-StyledRadio {
  position: absolute;
  opacity: 0.01;
}

.cache-i7tymf-StyledText-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

.cache-18bdq20-StyledExpandable-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-16v2aqw-StyledError {
  font-size: 12px;
  color: #ef5774;
  padding: 0 4px;
}

<form
    novalidate=""
  >
    <div
      class="cache-hvjhwn-BorderedBox-StyledBox e13z6rra3"
      disabled=""
    >
      <div
        class="cache-zdyabc-StyledRadioContainer e13z6rra2"
      >
        <div
          class="cache-1dp0kf7"
        >
          <label
            class="e1duuirp2 e1g1zfwd0 cache-17wwrut-StyledText-variantStyles-StyledRadioContainer-disabledClass"
            disabled=""
            for="test-disabled"
          >
            <div
              class="cache-1p2voni-IconContainer e1duuirp3"
            >
              <svg
                class="e1duuirp4 etwatq50 cache-12489do-StyledIcon-sizeStyles-StyledIcon"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
                />
              </svg>
            </div>
            <div>
              Choice 1
            </div>
            <input
              aria-checked="false"
              aria-disabled="true"
              class="cache-18s3dma-StyledRadio e1duuirp1"
              disabled=""
              id="test-disabled"
              name="test"
              style="pointer-events: none;"
              type="radio"
              value="disabled"
            />
          </label>
        </div>
      </div>
      <div
        class="e1g1zfwd0 cache-i7tymf-StyledText-variantStyles"
      >
        Radio field disabled
      </div>
    </div>
    <div
      class="e13z6rra0 e14o3tsk0 cache-18bdq20-StyledExpandable-StyledExpandable"
    >
      <div
        class="cache-16v2aqw-StyledError e13z6rra1"
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioBorderedBoxField should render correctly with errors 1`] = `
<DocumentFragment>
  .cache-saitdr-BorderedBox-StyledBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
  border: 1px solid #ef5774!important;
  box-shadow: 0 0 0 2px rgba(239,87,116,0.25);
}

.cache-zdyabc-StyledRadioContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:hover .e1duuirp3,
.cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:focus .e1duuirp3 {
  background-color: rgba(212,218,231,0.25);
  border-radius: 50%;
}

.cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:hover .e1duuirp3>.e1duuirp4,
.cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:focus .e1duuirp3>.e1duuirp4 {
  fill: #4f0599;
}

.cache-1p2voni-IconContainer {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-cuzpql-StyledIcon-sizeStyles-StyledIcon {
  fill: #ef5774;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-cuzpql-StyledIcon-sizeStyles-StyledIcon.cache-cuzpql-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-18s3dma-StyledRadio {
  position: absolute;
  opacity: 0.01;
}

.cache-i7tymf-StyledText-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

.cache-o1jcxj-StyledExpandable-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 5000px;
  opacity: 1;
  overflow: visible;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-16v2aqw-StyledError {
  font-size: 12px;
  color: #ef5774;
  padding: 0 4px;
}

<form
    novalidate=""
  >
    <div
      class="cache-saitdr-BorderedBox-StyledBox e13z6rra3"
    >
      <div
        class="cache-zdyabc-StyledRadioContainer e13z6rra2"
      >
        <div
          class="cache-1dp0kf7"
        >
          <label
            class="e1duuirp2 e1g1zfwd0 cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass"
            for="test-checked"
          >
            <div
              class="cache-1p2voni-IconContainer e1duuirp3"
            >
              <svg
                class="e1duuirp4 etwatq50 cache-cuzpql-StyledIcon-sizeStyles-StyledIcon"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
                />
              </svg>
            </div>
            <div>
              Choice 1
            </div>
            <input
              aria-checked="false"
              class="cache-18s3dma-StyledRadio e1duuirp1"
              id="test-checked"
              name="test"
              tabindex="0"
              type="radio"
              value="checked"
            />
          </label>
        </div>
      </div>
      <div
        class="e1g1zfwd0 cache-i7tymf-StyledText-variantStyles"
      >
        Radio field error
      </div>
    </div>
    <div
      class="e13z6rra0 e14o3tsk0 cache-o1jcxj-StyledExpandable-StyledExpandable"
    >
      <div
        class="cache-16v2aqw-StyledError e13z6rra1"
      >
        This field is required
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`RadioBorderedBoxField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-1d58127-BorderedBox-StyledBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  display: block;
  border: 1px solid #4f0599!important;
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
}

.cache-zdyabc-StyledRadioContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.cache-1dp0kf7.cache-1dp0kf7 {
  margin-right: 4px;
}

.cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 32px;
  cursor: pointer;
}

.cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:hover .e1duuirp3,
.cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:focus .e1duuirp3 {
  background-color: rgba(212,218,231,0.25);
  border-radius: 50%;
}

.cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:hover .e1duuirp3>.e1duuirp4,
.cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass:focus .e1duuirp3>.e1duuirp4 {
  fill: #4f0599;
}

.cache-1p2voni-IconContainer {
  min-width: 32px;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 8px;
}

.cache-1yojixf-StyledIcon-sizeStyles-StyledIcon {
  fill: #4f0599;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1yojixf-StyledIcon-sizeStyles-StyledIcon.cache-1yojixf-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
}

.cache-18s3dma-StyledRadio {
  position: absolute;
  opacity: 0.01;
}

.cache-i7tymf-StyledText-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

.cache-18bdq20-StyledExpandable-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  margin-top: 8px;
  margin-bottom: 8px;
}

.cache-16v2aqw-StyledError {
  font-size: 12px;
  color: #ef5774;
  padding: 0 4px;
}

<form
    novalidate=""
  >
    <div
      class="cache-1d58127-BorderedBox-StyledBox e13z6rra3"
    >
      <div
        class="cache-zdyabc-StyledRadioContainer e13z6rra2"
      >
        <div
          class="cache-1dp0kf7"
        >
          <label
            class="e1duuirp2 e1g1zfwd0 cache-1v0zvha-StyledText-variantStyles-StyledRadioContainer-activeFocusClass"
            for="test-events"
          >
            <div
              class="cache-1p2voni-IconContainer e1duuirp3"
            >
              <svg
                class="e1duuirp4 etwatq50 cache-1yojixf-StyledIcon-sizeStyles-StyledIcon"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,7A5,5 0 0,0 7,12A5,5 0 0,0 12,17A5,5 0 0,0 17,12A5,5 0 0,0 12,7Z"
                />
              </svg>
            </div>
            <div>
              Choice 1
            </div>
            <input
              aria-checked="true"
              class="cache-18s3dma-StyledRadio e1duuirp1"
              id="test-events"
              name="test"
              tabindex="0"
              type="radio"
              value="events"
            />
          </label>
        </div>
      </div>
      <div
        class="e1g1zfwd0 cache-i7tymf-StyledText-variantStyles"
      >
        Radio field events
      </div>
    </div>
    <div
      class="e13z6rra0 e14o3tsk0 cache-18bdq20-StyledExpandable-StyledExpandable"
    >
      <div
        class="cache-16v2aqw-StyledError e13z6rra1"
      />
    </div>
  </form>
</DocumentFragment>
`;
